# gptcomet

./: .bumpversion.cfg  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .repomixignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  JustFile  Justfile  LICENSE  README.md  README.zh.md  SPONSOR.md  cliff.toml  go.mod  go.sum  install.ps1  install.sh  main.go  mkdocs.yml  pyproject.toml  pyrightconfig.json  tox.ini  yek.yaml
.claude/: settings.json
.github/workflows/: build.yml  quality.yml  release.yml
aicommit/: __init__.py  _types.py  aicommit.toml  cli.py  config_manager.py  const.py  exceptions.py  hook.py  llm_client.py  main.py  message_generator.py  prepare-commit-msg  utils.py
aicommit/docs/: cli.md
artwork/: commit.tape  newprovider.tape
cmd/: commit.go  commit_action.go  commit_action_test.go  commit_test.go  common.go  common_test.go  config.go  config_test.go  flags.go  flags_test.go  provider.go  provider_test.go  review.go  review_test.go  update.go  update_test.go
cmd/gptcomet/: main.go
docs/: index.md  modules.md
go/: main.go
go/.github/workflows/: release.yml
go/cmd/: provider.go
go/internal/client/: client.go
go/internal/git/: git.go
gptcomet/: .goreleaser.yaml  __init__.py  _types.py  _validator.py  cli.py  config_manager.py  const.py  exceptions.py  go.sum  gptcomet.toml  gptcomet.yaml  hook.py  llm_client.py  log.py  message_generator.py  prepare-commit-msg  styles.py  support_keys.py  utils.py
gptcomet/clis/: __init__.py  __main__.py  commit.py  main.py  provider.py
gptcomet/clis/config/: __init__.py  append.py  get.py  keys.py  list.py  path.py  remove.py  reset.py  set.py
gptcomet/clis/generate/: __init__.py  commit.py
gptcomet/cmd/: commit.go
gptcomet/llms/: __init__.py  azure.py  base.py  chatglm.py  claude.py  cohere.py  deepseek.py  gemini.py  groq.py  kimi.py  mistral.py  ollama.py  openai.py  providers.py  sambanova.py  siliconllm.py  tongyi.py  vertexllm.py  xai.py
internal/client/: client.go  client_test.go
internal/config/: accessor.go  accessor_test.go  config.go  config_test.go  parser.go  parser_test.go  validator.go  validator_test.go
internal/constants/: constants.go  constants_test.go
internal/debug/: debug.go  debug_test.go
internal/errors/: constants.go  errors.go  errors_test.go  templates.go
internal/factory/: factory.go  factory_test.go
internal/git/: git.go  git_test.go  svn.go  svn_test.go  vcs.go
internal/llm/: ai21.go  ai21_test.go  azure.go  azure_test.go  builder.go  builder_test.go  chatglm.go  chatglm_test.go  claude.go  claude_test.go  cohere.go  cohere_test.go  deepseek.go  deepseek_test.go  gemini.go  gemini_test.go  groq.go  groq_test.go  hunyuan.go  hunyuan_test.go  kimi.go  kimi_test.go  llm.go  llm_test.go  longcat.go  longcat_test.go  minimax.go  minimax_test.go  mistral.go  mistral_test.go  modelscope.go  modelscope_test.go  ollama.go  ollama_test.go  openai.go  openai_test.go  openrouter.go  openrouter_test.go  provider.go  provider_test.go  (+15 more)
internal/logger/: logger.go  logger_test.go
internal/testutils/: mock_config.go  mock_llm.go  mock_vcs.go  testutils.go
internal/ui/: progress.go  progress_test.go  provider.go  provider_test.go  styles.go
openspec/changes/archive/2026-04-23-restrict-homebrew-update/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-restrict-homebrew-update/specs/self-update-policy/: spec.md
openspec/specs/self-update-policy/: spec.md
pkg/config/: types.go
pkg/config/defaults/: defaults.go  defaults_test.go
pkg/types/: types.go
plans/: 01-provider-and-config-refactoring.md  02-add-longcat-provider.md
py/: README.md  pyproject.toml
py/gptcomet/: __init__.py  cli.py
python/gptcomet/: __main__.py  config_manager.py  gptcomet.yaml  llm_client.py  message_generator.py  styles.py  support_keys.py
python/gptcomet/clis/: __main__.py  commit.py  provider.py
python/gptcomet/clis/config/: __init__.py  append.py  get.py  keys.py  list.py  reset.py  set.py
scripts/: gen_support_keys.py  get_binary_path.py  prepare_test_env.sh  update_changelog.py
scripts/profile/: _line_profile.py  _pyinstrument.py
scripts/profile/_line_profiler/: config_manager.py
tests/: __init__.py  config.toml  conftest.py  gptcomet.yaml  test_api_key_mask.py  test_config_manager.py  test_is_float.py  test_llm_client.py  test_log.py  test_mark_api_keys.py  test_message_generator.py  test_retry_backoff.py  test_should_ignore.py  test_smoke_test.py  test_strtobool.py  test_stylize.py  test_validator.py
tests/clis/: test_commit.py  test_commit2.py  test_gen_output.py
tests/config_manager/: test_config_manager.py  test_config_manager_ensure_config_file.py  test_config_manager_get_nested_value.py  test_convert2yaml_value.py  test_invoke_cli.py  test_save_config.py  test_set_nested_value.py
tests/integration/: commit_integration_test.go  config_integration_test.go  provider_integration_test.go
tests/llms/: conftest.py  test_azure.py  test_base_llm.py  test_chatglm.py  test_claude.py  test_gemini.py  test_groq.py  test_ollama.py  test_openai.py  test_providers.py  test_tongyi.py  test_vertexllm.py
tests/message_generator/: test_make_ignored_options.py  test_message_generator.py
tests/profile/: _line_profile.py  _pyinstrument.py  decorator.py
tests/profile/_line_profiler/: config_manager.py
tests/py_tests/: __init__.py  conftest.py  test_wrapper.py
