[project]
name = "gptcomet"
version = "0.1.0"  # This should match your Go version
description = "gptcomet: A tool that leverages AI to automatically generate Git commit messages"
authors = [{ name = "belingud", email = "im.victor@qq.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = []
license = { text = "MIT license" }
keywords = [
    "ai",
    "git",
    "commit",
    "message",
    "ai-powered",
    "commit-message",
    "gptcomet",
    "chatgpt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["gptcomet"]
excludes = ["tests"]
is-purelib = false  # This is important for binary distributions

[project.scripts]
gmsg = "gptcomet.cli:main"
