[project]
name = "gptcomet"
version = "0.1.3"
description = "gptcomet: A tool that leverages AI to automatically generate Git commit messages"
authors = [{ name = "belingud", email = "im.victor@qq.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = []
license = { text = "MIT license" }
keywords = [
    "ai",
    "git",
    "commit",
    "message",
    "ai-powered",
    "commit-message",
    "gptcomet",
    "chatgpt",
]
classifiers = [
    # Development Status options:
    # 1 - Planning - Initial planning and design phase
    # 2 - Pre-Alpha - Early development, not feature complete
    # 3 - Alpha - Feature complete but unstable, testing phase
    # 4 - Beta - Feature complete and mostly stable, public testing
    # 5 - Production/Stable - Production ready, stable release
    # 6 - Mature - Well-established, battle-tested production release
    # 7 - Inactive - No longer maintained or supported
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["gptcomet"]
excludes = ["tests"]
is-purelib = false  # This is important for binary distributions
# 使用更通用的平台标签
platforms = [
    # Windows
    "win_amd64",
    # Linux - 使用更旧的 manylinux 标签以提高兼容性
    "manylinux1_x86_64",  # 最广泛兼容的 Linux 标签
    "manylinux1_aarch64",
    # macOS - 使用更低的最小版本要求
    "macosx_10_9_x86_64",  # 支持 OS X 10.9 及以上
    "macosx_10_9_arm64"   # M1/M2 芯片支持
]

[project.scripts]
gmsg = "gptcomet.cli:main"
